add loading screen

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -27,7 +27,101 @@
 </head>
 
 <body>
-  <app-root class="site-root"></app-root>
+  <app-root class="site-root">
+    <!-- the following code goes inside the <app-root> component in the index.html page -->
+    <style>
+      .sr-only {
+        position: absolute;
+        overflow: hidden;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        border: 0;
+        clip: rect(0, 0, 0, 0);
+        -webkit-clip-path: inset(50%);
+        clip-path: inset(50%);
+        white-space: nowrap;
+      }
+
+      .loading-screen {
+        position: fixed;
+        z-index: 10000;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-image: linear-gradient(135deg, #3e53a4 0%, #cf0989 100%);
+      }
+
+      [theme='ocean'] .loading-screen,
+      [data-theme='ocean'] .loading-screen {
+        background-image: linear-gradient(135deg, #314183 0%, #1f62ae 50%, #0c884c 100%);
+      }
+
+      [theme='sunset'] .loading-screen,
+      [data-theme='sunset'] .loading-screen {
+        background-image: linear-gradient(135deg, #78479f 0%, #cf0989 50%, #cc4d14 100%);
+      }
+
+      [theme='twilight'] .loading-screen,
+      [data-theme='twilight'] .loading-screen {
+        background-image: linear-gradient(135deg, #0072b8 0%, #314183 50%, #a03f9b 100%);
+      }
+
+      .loading-screen-logo {
+        margin-bottom: 10px;
+      }
+
+      .loading-screen-spinner svg {
+        -webkit-animation: icon-spin 2s infinite linear;
+        animation: icon-spin 2s infinite linear;
+      }
+
+      @-webkit-keyframes icon-spin {
+        0% {
+          -webkit-transform: rotate(0deg);
+        }
+
+        100% {
+          -webkit-transform: rotate(360deg);
+        }
+      }
+
+      @keyframes icon-spin {
+        0% {
+          -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+
+        100% {
+          -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+
+    <div class="loading-screen">
+      <p class="sr-only">Loading application</p>
+      <div class="loading-screen-logo">
+        <svg width="132" height="27">
+          <g fill="#FFF" fill-rule="evenodd">
+            <path d="M113.093 9.752c.203-.273.526-.295.844-.059.319.236.39.553.187.825a5.07 5.07 0 0 0-.953 3.001 5.055 5.055 0 0 0 .953 3.002c.202.273.132.588-.187.825-.322.236-.642.214-.845-.057a6.303 6.303 0 0 1-1.207-3.77 6.286 6.286 0 0 1 1.208-3.767m5.03 11.533c-.254 0-.445.174-.445.53 0 .323.172.524.445.524.064.002.125.002.188.002 4.875 0 8.84-3.966 8.84-8.84 0-4.876-3.965-8.84-8.84-8.84-.065-.003-.125 0-.188.001-.275 0-.445.203-.445.53 0 .323.172.524.445.524.063-.002.125-.003.188-.003 4.293 0 7.787 3.494 7.787 7.787 0 4.294-3.494 7.787-7.787 7.787-.063 0-.125 0-.188-.002M113.702 6.03a.43.43 0 0 0-.243.078 8.821 8.821 0 0 0-3.991 7.393 8.822 8.822 0 0 0 3.992 7.394.44.44 0 0 0 .242.078c.156 0 .305-.097.422-.273.175-.266.148-.522-.067-.676l-.016-.008a7.775 7.775 0 0 1-3.52-6.515 7.771 7.771 0 0 1 3.52-6.512.42.42 0 0 0 .196-.297.602.602 0 0 0-.113-.389c-.117-.175-.266-.273-.422-.273m.133-2.75a.381.381 0 0 0-.153.036 11.187 11.187 0 0 0-4.727 4.056 11.135 11.135 0 0 0-1.828 6.13c0 6.167 5.02 11.184 11.185 11.184 6.169 0 11.186-5.017 11.186-11.185 0-6.166-5.017-11.184-11.186-11.184-.094 0-.185 0-.277.002-.22 0-.357.162-.357.422 0 .262.137.422.355.422.08-.002.166-.004.279-.004 5.703 0 10.343 4.641 10.343 10.342 0 5.706-4.64 10.341-10.343 10.341s-10.341-4.635-10.341-10.34c0-4.046 2.38-7.744 6.066-9.419.2-.092.254-.297.149-.533-.082-.174-.203-.27-.351-.27m4.477 23.002c-7.056 0-12.78-5.723-12.78-12.78 0-7.058 5.724-12.78 12.78-12.78 7.057 0 12.78 5.722 12.78 12.78 0 7.057-5.723 12.78-12.78 12.78m0-26.28c-7.454 0-13.5 6.043-13.5 13.5 0 7.455 6.046 13.5 13.5 13.5 7.456 0 13.499-6.045 13.499-13.5 0-7.457-6.043-13.5-13.5-13.5" />
+            <path d="M118.334 19.936c-.413 0-.656-.305-.656-.776 0-.47.243-.771.656-.771a4.875 4.875 0 0 0 4.848-4.886c0-2.768-2.256-4.892-4.832-4.892-.953 0-1.468.185-1.879.332-.176.065-.419.16-.606.16-.41 0-.678-.342-.678-.723V2.628c0-.405.296-.657.772-.657.477 0 .77.252.77.657v4.657a6.428 6.428 0 0 1 8.009 6.226 6.421 6.421 0 0 1-6.404 6.425m0-2.819c-.413 0-.656-.305-.656-.776 0-.468.243-.773.656-.773 1.164-.086 2.048-.983 2.048-2.07 0-1.143-.985-2.072-2.196-2.072-.602 0-1.094.152-1.457.454v9.626c0 .465-.318.69-.77.69-.466 0-.772-.228-.772-.69v-9.49c0-.024-.008-.597.006-.701.03-.245.248-.502.629-.74.663-.418 1.707-.69 2.494-.69 1.963-.015 3.62 1.59 3.62 3.617a3.617 3.617 0 0 1-3.602 3.615M1.456 23.1v-4.695c.474.129.982.203 1.51.203 3.312 0 5.37-1.877 5.37-5.174 0-2.82-1.765-4.551-4.532-4.551-1.312 0-2.674.4-3.804 1.348V23.1h1.456zm0-12.357c.62-.403 1.328-.584 2.202-.584 2.002 0 3.148 1.328 3.148 3.295 0 2.494-1.364 3.875-3.767 3.875-.655 0-1.109-.071-1.583-.252v-6.334zm8.65 7.644h1.456V9.104h-1.456v9.283zm.748-11.031a.94.94 0 0 0 .946-.947.957.957 0 0 0-.946-.966.96.96 0 0 0-.966.966c0 .529.418.947.966.947zm8.075 9.756a5.56 5.56 0 0 1-1.64.236c-.656 0-1.148-.184-1.148-1.385v-5.64h2.441v-1.22h-2.44V6.81h-1.438v2.294h-1.547v1.219h1.547v5.918c0 1.672.873 2.367 2.24 2.367.764 0 1.417-.11 1.985-.328v-1.168zm9.172 1.275v-6.08c0-2.622-1.583-3.424-3.605-3.424-1.364 0-2.984.349-4.167.785v8.719h1.456v-7.773c.602-.236 1.547-.418 2.365-.418 1.693 0 2.494.582 2.494 2.619v5.572h1.457zm9.555-1.676c-.727.366-1.89.618-3.02.618-2.259 0-3.406-1.071-3.496-3.24h6.7c.015-.253.051-.763.051-.964 0-2.621-1.327-4.242-3.892-4.242-2.878 0-4.333 2.113-4.333 4.879 0 3.115 1.635 4.846 4.787 4.846 1.257 0 2.457-.221 3.203-.656V16.71zm-6.462-3.841c.164-1.692 1.075-2.747 2.696-2.747 1.656 0 2.493.91 2.547 2.747h-5.243zM42.082 23.1l1.766-4.713 3.693-9.283h-1.6l-2.82 7.59-2.769-7.59h-1.655l3.696 9.283-1.785 4.713h1.474zm9.076-4.988c.891.293 1.858.496 2.93.496 3.37 0 5.406-1.877 5.406-5.174 0-2.84-1.745-4.551-4.533-4.551-.817 0-1.584.146-2.345.474v-4.64h-1.458v13.395zm1.458-7.461c.653-.346 1.328-.492 2.2-.492 2.003 0 3.152 1.328 3.152 3.295 0 2.494-1.367 3.875-3.753 3.875-.654 0-1.107-.071-1.599-.252V10.65zM65.3 18.608c2.95 0 4.424-2.153 4.424-4.863 0-2.731-1.274-4.862-4.424-4.862-2.947 0-4.424 2.15-4.424 4.862 0 2.73 1.277 4.863 4.424 4.863zm0-1.28c-1.855 0-2.894-1.417-2.894-3.566 0-2.183 1.04-3.603 2.894-3.603 1.857 0 2.895 1.42 2.895 3.568 0 2.184-1.057 3.602-2.895 3.602zm15.086 1.059l2.681-9.283h-1.439l-1.93 7.299-2.148-7.3h-1.602l-2.128 7.388-1.913-7.387H70.34l2.676 9.283h1.511l2.222-7.373 2.13 7.373h1.506zM91.75 16.71c-.732.366-1.895.618-3.022.618-2.259 0-3.404-1.071-3.498-3.24h6.702c.017-.253.054-.763.054-.964 0-2.621-1.33-4.242-3.893-4.242-2.88 0-4.333 2.113-4.333 4.879 0 3.115 1.637 4.846 4.79 4.846 1.251 0 2.452-.221 3.2-.656V16.71zm-6.46-3.841c.162-1.692 1.07-2.747 2.693-2.747 1.657 0 2.493.91 2.547 2.747h-5.24zm8.19 5.06c.59.418 1.584.678 2.625.678 2.164 0 3.457-1.113 3.457-2.914 0-1.423-.748-2.15-2.769-2.824-1.346-.436-1.91-.856-1.91-1.51 0-.836.713-1.256 1.75-1.256.93 0 1.82.236 2.621.728V9.576c-.528-.401-1.64-.693-2.588-.693-2 0-3.222.927-3.222 2.513 0 1.219.712 2.076 2.425 2.64 1.638.527 2.256.876 2.256 1.765 0 .965-.766 1.567-2.02 1.567-1.003 0-2.058-.291-2.625-.711v1.273z" />
+          </g>
+        </svg>
+      </div>
+      <div class="loading-screen-spinner">
+        <svg width="16" height="16">
+          <path fill="#fff" d="M8 16a7.928 7.928 0 0 1-3.428-.77l.857-1.807A6.006 6.006 0 0 0 14 8c0-3.309-2.691-6-6-6a6.006 6.006 0 0 0-5.422 8.572l-1.806.859A7.929 7.929 0 0 1 0 8c0-4.411 3.589-8 8-8s8 3.589 8 8-3.589 8-8 8z" />
+        </svg>
+      </div>
+    </div>
+
+  </app-root>
 </body>
 
 </html>
